Fixes for the following issues
Work Item 388891: Remove test configurations with older toolkits from
pom
Work Item 388892: Add default values to Config
Work Item 389374: Prepare -rtc plugin for 1.2.0.1 release
Work Item 389377: TeamConcert Jenkins Plugin Prepare for next
development iteration 1.2.0.1
Work Item 391632: In the job configuration UI provide a textbox titled
"Project Area/Team Area" along with an option to validate the provided
value