@@ -59,18 +59,21 @@
 		<connection>scm:git:https://github.com/jenkinsci/teamconcert-plugin.git</connection>
 		<developerConnection>scm:git:https://github.com/jenkinsci/teamconcert-plugin.git</developerConnection>
 		<url>https://github.com/jenkinsci/teamconcert-plugin</url>
-	  	<tag>HEAD</tag>
+        <tag>HEAD</tag>
 	</scm>
 
-	<properties>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<project.build.outputEncoding>UTF-8</project.build.outputEncoding>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<buildtoolkitcurrent>${env.buildtoolkitcurrent}</buildtoolkitcurrent>
-		<buildtoolkit60>${env.buildtoolkit60}</buildtoolkit60>
-		<buildtoolkit502>${env.buildtoolkit502}</buildtoolkit502>
-		<buildtoolkit407>${env.buildtoolkit407}</buildtoolkit407>
-	</properties>
+    <properties>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <serverURI>${env.serverURI}</serverURI>
+        <userId>${env.userId}</userId>
+        <password>${env.password}</password>
+        <invalidUserId>${env.invalidUserid}</invalidUserId>
+        <timeout>${env.timeout}</timeout>
+        <configured>false</configured>
+        <buildtoolkit>${env.buildtoolkit}</buildtoolkit>
+    </properties>
 
 	<!-- get every artifact through repo.jenkins-ci.org, which proxies all the 
 		artifacts that we need -->
@@ -96,12 +99,12 @@
 		<dependency>
 			<groupId>com.ibm.team.build</groupId>
 			<artifactId>com.ibm.team.build.hjplugin-rtc</artifactId>
-			<version>1.0.9</version>
+			<version>1.2.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.ibm.team.build</groupId>
 			<artifactId>com.ibm.team.build.hjplugin-rtc</artifactId>
-			<version>1.0.9</version>
+			<version>1.2.0</version>
 			<type>test-jar</type>
 			<scope>test</scope>
 		</dependency>
@@ -151,81 +154,15 @@
 						<configuration>
 							<argLine>-XX:MaxPermSize=1024m -Xms2048m -Xmx3g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:-HeapDumpOnOutOfMemoryError</argLine>
 							<systemPropertyVariables>
-								<com.ibm.team.build.configured>false</com.ibm.team.build.configured>
-								<com.ibm.team.build.toolkit>${buildtoolkitcurrent}</com.ibm.team.build.toolkit>
-								<com.ibm.team.build.serverURI>https://higgins.ottawa.ibm.com:9443/ccm</com.ibm.team.build.serverURI>
-								<com.ibm.team.build.userId>HJPluginTests</com.ibm.team.build.userId>
-								<com.ibm.team.build.password>HJPluginTests</com.ibm.team.build.password>
-								<com.ibm.team.build.userIdForAuthenticationFailures>HJPluginTestsFail</com.ibm.team.build.userIdForAuthenticationFailures>
-								<com.ibm.team.build.passwordFile>C:/Jenkins/HJPluginTests-password</com.ibm.team.build.passwordFile>
-								<com.ibm.team.build.timeout>480</com.ibm.team.build.timeout>
+								<com.ibm.team.build.configured>${configured}</com.ibm.team.build.configured>
+								<com.ibm.team.build.toolkit>${buildtoolkit}</com.ibm.team.build.toolkit>
+								<com.ibm.team.build.serverURI>${serverURI}</com.ibm.team.build.serverURI>
+								<com.ibm.team.build.userId>${userId}</com.ibm.team.build.userId>
+								<com.ibm.team.build.password>${password}</com.ibm.team.build.password>
+								<com.ibm.team.build.userIdForAuthenticationFailures>${invalidUserId}</com.ibm.team.build.userIdForAuthenticationFailures>
+								<com.ibm.team.build.timeout>${timeout}</com.ibm.team.build.timeout>
 							</systemPropertyVariables>
 							<summaryFile>target/failsafe-reports/failsafe-summary.xml</summaryFile>
-						</configuration>
-					</execution>
-					<execution>
-						<id>integration-test-60</id>
-						<phase>integration-test</phase>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-						<configuration>
-							<argLine>-XX:MaxPermSize=1024m -Xms2048m -Xmx3g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:-HeapDumpOnOutOfMemoryError</argLine>
-							<systemPropertyVariables>
-								<com.ibm.team.build.configured>false</com.ibm.team.build.configured>
-								<com.ibm.team.build.toolkit>${buildtoolkit60}</com.ibm.team.build.toolkit>
-								<com.ibm.team.build.serverURI>https://higgins.ottawa.ibm.com:9443/ccm</com.ibm.team.build.serverURI>
-								<com.ibm.team.build.userId>HJPluginTests</com.ibm.team.build.userId>
-								<com.ibm.team.build.password>HJPluginTests</com.ibm.team.build.password>
-								<com.ibm.team.build.userIdForAuthenticationFailures>HJPluginTestsFail</com.ibm.team.build.userIdForAuthenticationFailures>
-								<com.ibm.team.build.passwordFile>C:/Jenkins/HJPluginTests-password</com.ibm.team.build.passwordFile>
-								<com.ibm.team.build.timeout>480</com.ibm.team.build.timeout>
-							</systemPropertyVariables>
-							<summaryFile>target/failsafe-reports/failsafe-summary-60.xml</summaryFile>
-						</configuration>
-					</execution>
-					
-					<execution>
-						<id>integration-test-502</id>
-						<phase>integration-test</phase>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-						<configuration>
-							<argLine>-XX:MaxPermSize=1024m -Xms2048m -Xmx3g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:-HeapDumpOnOutOfMemoryError</argLine>
-							<systemPropertyVariables>
-								<com.ibm.team.build.configured>false</com.ibm.team.build.configured>
-								<com.ibm.team.build.toolkit>${buildtoolkit502}</com.ibm.team.build.toolkit>
-								<com.ibm.team.build.serverURI>https://higgins.ottawa.ibm.com:9443/ccm</com.ibm.team.build.serverURI>
-								<com.ibm.team.build.userId>HJPluginTests</com.ibm.team.build.userId>
-								<com.ibm.team.build.password>HJPluginTests</com.ibm.team.build.password>
-								<com.ibm.team.build.userIdForAuthenticationFailures>HJPluginTestsFail</com.ibm.team.build.userIdForAuthenticationFailures>
-								<com.ibm.team.build.passwordFile>C:/Jenkins/HJPluginTests-password</com.ibm.team.build.passwordFile>
-								<com.ibm.team.build.timeout>480</com.ibm.team.build.timeout>
-							</systemPropertyVariables>
-							<summaryFile>target/failsafe-reports/failsafe-summary-502.xml</summaryFile>
-						</configuration>
-					</execution>
-					
-					<execution>
-						<id>integration-test-407</id>
-						<phase>integration-test</phase>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-						<configuration>
-							<argLine>-XX:MaxPermSize=1024m -Xms2048m -Xmx3g -XX:+UseConcMarkSweepGC -XX:+CMSClassUnloadingEnabled -XX:-HeapDumpOnOutOfMemoryError</argLine>
-							<systemPropertyVariables>
-								<com.ibm.team.build.configured>false</com.ibm.team.build.configured>
-								<com.ibm.team.build.toolkit>${buildtoolkit407}</com.ibm.team.build.toolkit>
-								<com.ibm.team.build.serverURI>https://higgins.ottawa.ibm.com:9443/ccm</com.ibm.team.build.serverURI>
-								<com.ibm.team.build.userId>HJPluginTests</com.ibm.team.build.userId>
-								<com.ibm.team.build.password>HJPluginTests</com.ibm.team.build.password>
-								<com.ibm.team.build.userIdForAuthenticationFailures>HJPluginTestsFail</com.ibm.team.build.userIdForAuthenticationFailures>
-								<com.ibm.team.build.passwordFile>C:/Jenkins/HJPluginTests-password</com.ibm.team.build.passwordFile>
-								<com.ibm.team.build.timeout>480</com.ibm.team.build.timeout>
-							</systemPropertyVariables>
-							<summaryFile>target/failsafe-reports/failsafe-summary-407.xml</summaryFile>
 						</configuration>
 					</execution>
 					<execution>
@@ -235,9 +172,6 @@
 			            </goals>
 			            <configuration>
 			              <summaryFiles>
-			                <summaryFile>target/failsafe-reports/failsafe-summary-407.xml</summaryFile>
-			                <summaryFile>target/failsafe-reports/failsafe-summary-502.xml</summaryFile>
-			                <summaryFile>target/failsafe-reports/failsafe-summary-60.xml</summaryFile>
 			                <summaryFile>target/failsafe-reports/failsafe-summary.xml</summaryFile>
 			              </summaryFiles>
 			            </configuration>
